# NVIDIA-triage-alerting-poc

./: .env.example  .gitignore  Dockerfile  HOSTING.md  LANGFUSE_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_langfuse_direct.py  test_llm.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  graph.py  guardrails.py  llm.py  observability.py  state.py
app/agents/experiments/: __init__.py  framework.py  runner.py
app/agents/nodes/: analyze_logs.py  analyze_metrics.py  finalize.py  gather_context.py  incident_rag.py  plan_remediation.py  validate_action.py
app/agents/tools/: dcgm.py  elasticsearch.py  prometheus.py
app/api/routes/: alerts.py  experiments.py  health.py  observability.py
app/mcp/: __init__.py  kafka.py  prometheus.py
app/ml/: __init__.py  anomaly_detector.py
app/models/: alert.py  database.py
app/services/: alert_gen.py  database.py  triage.py
config/guardrails/: config.yml
data/: triage_results.json
infra/ansible/: gpu-nodes.yml
infra/k8s/: triage-agent-deployment.yaml
infra/terraform/: main.tf
pages/: agent_introspection.py  experiments.py  observability.py
synthetic/: __init__.py  alert_generator.py  services.yaml
